# nebula-agents

./: .gitattributes  .gitignore  CHANGELOG.md  CONSUMER-CONTRACT.md  lifecycle-stage.yaml
engine/: pyproject.toml
engine/src/nebula_agents/: __init__.py  __main__.py  bootstrap.py
engine/src/nebula_agents/application/: __init__.py  authorization.py  gates.py  ports.py  preflight.py  queries.py  runs.py  transcripts.py
engine/src/nebula_agents/domain/: __init__.py  enums.py  errors.py  models.py  path_contracts.py  redaction.py  transitions.py
engine/src/nebula_agents/infrastructure/: __init__.py  config.py  filesystem_store.py  identity.py  policy_store.py  process.py  (+6 more)
engine/tests/: conftest.py
engine/tests/contract/: test_cli.py  test_cli_edge_contracts.py  test_contract_files.py  test_formatter_interop_edges.py  test_formatters.py  test_json_schemas.py
engine/tests/fixtures/: fake_provider.py
engine/tests/integration/: test_bootstrap.py  test_commit_reconciliation.py  test_filesystem_store.py  test_process_and_providers.py  test_real_tmux_lifecycle.py  test_story_validator_descriptor_boundary.py  test_transcript_adapter.py  test_transcript_filter.py
engine/tests/security/: test_presentation_boundary_edges.py  test_redaction.py  test_session_entry.py  test_static_execution_boundary.py
engine/tests/unit/: test_application_services.py  test_authorization.py  test_models.py  test_preflight.py  test_runtime_config_identity_policy.py  test_tmux_adapter.py  test_transitions.py  test_tui_actions.py  test_tui_behavioral_coverage.py  test_watcher_validator.py
(+437 files in other folders)
