[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula-agents"
version = "0.1.0"
description = "Local tmux-native cockpit for governed agent runs"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.18,<5"]

[project.optional-dependencies]
test = ["pytest>=9.0.3,<10", "pytest-cov>=5,<7"]

[project.scripts]
nebula-agents = "nebula_agents.presentation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["nebula_agents"]

[tool.coverage.report]
show_missing = true
fail_under = 85
